# shadowfax

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  config.mk  environment.sh  init.S  init.ld  kernel.S  kernel.ld  linker.ld  qemu-1cpu.dts  rust-toolchain.toml  wrapper.h
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  pre-commit.yml  rust.yml
common/: Cargo.toml
common/src/: lib.rs
docs/: requirements.txt
docs/source/: conf.py  index.rst
examples/: README.md
examples/common/: config.mk  init.S
examples/helloworld/: Makefile  README.md  baremetal.ld  main.c  main.s
examples/helloworld-c/: Makefile  README.md
examples/helloworld-rust/: main.rs
guests/: Makefile  attestation.c  compile_guest.sh  covg.c  hellotvm.c  linker.ld  vmstartup.S
guests/coremark/: README.md  barebones_porting.md  dry.c
guests/coremark/barebones/: core_portme.mak
guests/coremark/cygwin/: core_portme.mak
guests/coremark/docs/html/: index.html
guests/coremark/macos/: core_portme.mak
guests/coremark/posix/: core_portme.c  core_portme.mak
guests/coremark/riscv/: bare.ld  core_portme.c  core_portme.h  core_portme.mak  crt0.S  ee_printf.c  sbi.c  sbi.h
guests/riscv-tests/: Makefile.in  README.md  configure
guests/riscv-tests/benchmarks/: Makefile
guests/riscv-tests/benchmarks/common/: cove.ld  scrt.S.old  syscalls.c  test.ld
guests/riscv-tests/benchmarks/dhrystone/: dhrystone.h  dhrystone_main.c
guests/riscv-tests/benchmarks/median/: median_gendata.pl
guests/riscv-tests/benchmarks/memcpy/: dataset1.h  memcpy_gendata.pl
guests/riscv-tests/benchmarks/mm/: mm_main.c
guests/riscv-tests/benchmarks/mt-matmul/: dataset.h  matmul.c  matmul_gendata.pl  mt-matmul.c
guests/riscv-tests/benchmarks/mt-memcpy/: dataset1.h  memcpy_gendata.pl
guests/riscv-tests/benchmarks/mt-vvadd/: dataset.h  mt-vvadd.c  vvadd_gendata.pl
guests/riscv-tests/benchmarks/multiply/: dataset1.h  multiply.c  multiply_gendata.pl
guests/riscv-tests/benchmarks/qsort/: qsort_gendata.pl
guests/riscv-tests/benchmarks/rsort/: dataset1.h  rsort.c
guests/riscv-tests/benchmarks/towers/: towers_main.c
guests/riscv-tests/benchmarks/vec-daxpy/: dataset1.h  daxpy_gendata.pl
guests/riscv-tests/benchmarks/vec-sgemm/: dataset1.h  sgemm_gendata.pl  vec-sgemm.S
guests/riscv-tests/benchmarks/vec-strcmp/: vec-strcmp.S
guests/riscv-tests/benchmarks/vvadd/: dataset1-large.h  vvadd_gendata.pl  vvadd_main.c
guests/riscv-tests/debug/programs/: entry.S  semihosting.h  translate.c  vectors.S
guests/riscv-tests/isa/hypervisor/: 2-stage_translation.S
guests/riscv-tests/isa/rv32uzbkb/: Makefrag  unzip.S  (+1 more)
guests/riscv-tests/mt/: Makefile  ad_matmul.c  ae_matmul.c  af_matmul.c  ag_matmul.c  ai_matmul.c  ak_matmul.c  al_matmul.c  an_matmul.c  ap_matmul.c  aq_matmul.c  ar_matmul.c  at_matmul.c  av_matmul.c  ay_matmul.c  az_matmul.c  bc_matmul.c  bf_matmul.c  bh_matmul.c  bj_matmul.c  bk_matmul.c  bm_matmul.c  br_matmul.c  ce_matmul.c  cf_matmul.c  cg_matmul.c  ci_matmul.c  ck_matmul.c  cl_matmul.c  cm_matmul.c  cs_matmul.c  cv_matmul.c  cy_matmul.c  dc_matmul.c  df_matmul.c  dm_matmul.c  do_matmul.c  dr_matmul.c  du_matmul.c  dv_matmul.c
payload/common/: config.mk
payload/empty/: Makefile
payload/enum-supervisor-domains/: .gitignore  Cargo.toml  memory.x
payload/enum-supervisor-domains/.cargo/: config.toml
payload/enum-supervisor-domains/src/: cove.rs  log.rs  main.rs
payload/hypervisor/: Cargo.toml  build.rs  memory.x
payload/hypervisor/.cargo/: config.toml
payload/hypervisor/guests/: Makefile  ecall.S  empty.S  kernel.ld
payload/hypervisor/src/: log.rs  main.rs
payload/mini-hypervisor/: Cargo.toml  empty.elf  kernel.elf  memory.x
payload/mini-hypervisor/.cargo/: config.toml
payload/mini-hypervisor/src/: h_extension.rs  main.rs  trap.rs
payload/test_guest/: Makefile  ecall.S  ecall.elf  empty.S  kernel.ld
payload/tsm/: Cargo.toml  build.rs  memory.x
payload/tsm/src/: main.rs  state.rs
platform/generic/: device-tree.dts  memory.x
platform/qemu-generic/: device-tree.dts  memory.x
scripts/: Dockerfile.setup  README.md  dice_tool.py  environment.sh  gdb  gdb_covh_create_tvm.py  gdb_covh_create_tvm_from_elf.py  gdb_covh_flow.py  gdb_covh_get_tsm_info.py  gdb_create_tvm.py  gdb_settings  gdb_simple_teecall_teeret.py  llvm-config.sh  run_linux.sh  setup.sh  setup_linux.sh
scripts/initramfs/etc/: motd
shadowfax/: Cargo.toml  build.rs  memory.x  opensbi-sbi-domain-change-active.diff  wrapper.h
shadowfax-core/: Cargo.toml  build.rs
shadowfax-core/platform/generic/: device-tree.dts  memory.x
shadowfax-core/src/: context.rs  cove.rs  domain.rs  main.rs  state.rs  tsm.rs
shadowfax/.cargo/: config.toml
shadowfax/platform/generic/: device-tree.dts  memory.x
shadowfax/src/: constants.rs  context.rs  cove.rs  debug.rs  domain.rs  error.rs  main.rs  memory_layout.rs  scheduler.rs  state.rs  trap.rs  tsm.rs
src/: Makefile  context.rs  cove.rs  debug.rs  domain.rs  functions.S  init.S  init.ld  lib.rs  main.rs  state.rs  trap.rs
src/cove/: constants.rs  cove_host_extension.rs  coveh_ext.rs  mod.rs  supd_ext.rs  supd_extension.rs  types.rs
src/sbi/: mod.rs  nacl_extension.rs
src/sbi/cove/: constants.rs  cove_host_extension.rs  mod.rs  supd_extension.rs  types.rs
src/shadowfax_core/: mod.rs  state.rs
test/: Cargo.toml  riscv_tee.py
test/debug/: gdb_covh_create_tvm.py  gdb_covh_create_tvm_from_elf.py  gdb_covh_get_tsm_info.py  gdbinit
test/functional/tests/: boot.rs
test/security/simple-scenario/: attack.csv  scenario.py
test/tests/: boot.rs
tsm/: Cargo.toml  README.md  build.rs  memory.x
tsm/src/: allocator.rs  guest_page_table.rs  hyper.rs  log.rs  main.rs  perf.rs  sbi.rs  state.rs
video/: README.md  hypervisor-standalone.mkv
(+72 files in other folders)
