[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
coset = { version = "0.4.0", default-features = false }
ed25519-compact = { version = "2.2.0", default-features = false }
hkdf = { version = "0.12.4", default-features = false }
linked_list_allocator = "0.10.5"
sha2 = { version = "0.10.9", default-features = false }
