[package]
name = "shadowfax"
version = "0.1.0"
edition = "2021"
authors = ["Giuseppe Capasso"]

# Default (glibc) build-deps used when the build host is NOT musl
[target.'cfg(not(target_env = "musl"))'.build-dependencies]
bindgen = "0.71.1"

# When the build host is musl, use a bindgen build configured for static clang
[target.'cfg(target_env = "musl")'.build-dependencies]
bindgen = { version = "0.71.1", default-features = false, features = ["logging", "prettyplease", "static"] }

[target.'cfg(target_env = "musl")'.build-dependencies.clang-sys]
version = "1.8.1"
features = ["static"]

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
common  = { path = "../common/" }
digest = "0.10.7"
elf = { version = "0.7.2", default-features = false }
fdt-rs = {version = "0.4", default-features = false }
heapless = "0.8.0"
linked_list_allocator = "0.10.5"
riscv = "0.13.0"
sha2 = { version = "0.10.9", default-features = false }
rsa = { version = "0.9.8", default-features = false, features = ["pem", "u64_digit", "sha2"] }
spin = { version = "0.10.0", features = ["spin_mutex"] }
