[package]
name = "tsm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
common = { path = "../common/" }
elf = { version = "0.7.2", default-features = false }
heapless = "0.8.0"
linked_list_allocator = "0.10.5"
riscv = "0.13.0"
sha2 = {version = "0.10.9", default-features = false }
spin = { version = "0.10.0", features = ["spin_mutex"] }
